--- a/sass/main.sass
+++ b/sass/main.sass
@@ -1,3 +1,87 @@
-@import "part"
+//@import "part"
+
+body
+    padding: 0 5%
+    width: 1160px
+
+.logo
+    float: left
+    margin: 30px 0
+
+.shareing
+    height: 40px
+    width: 180px
+    float: right
+    margin: 30px 0
 
 
+.shareing li
+    list-style-type: none
+    float: right
+    overflow: hidden
+    margin: 10px
+.shareing a
+    display: block
+    width: 16px
+    height: 16px
+    // background: url('../img/shareBy.png')
+
+.facebook
+    background: url('../img/shareBy.png') 0 0
+.facebook:hover
+    background: url('../img/shareBy.png') 0 16px
+
+.twitter
+    background: url('../img/shareBy.png') -16px 0
+.twitter:hover
+    background: url('../img/shareBy.png') -16px 16px
+
+.rss
+    background: url('../img/shareBy.png') -39px 0
+.rss:hover
+    background: url('../img/shareBy.png') -39px 16px
+
+.linkedin
+    background: url('../img/shareBy.png') -62px 0
+.linkedin:hover
+    background: url('../img/shareBy.png') -62px 16px
+
+.skype
+    background: url('../img/shareBy.png') -86px 0
+.skype:hover
+    background: url('../img/shareBy.png') -86px 16px
+
+.nav
+    clear: both
+    height: 64px
+    width: 1160px
+    background-color: black
+    margin: auto
+
+
+.nav li
+    list-style-type: none
+    background-color: black
+    float: left
+    padding: 23px 40px
+.nav li:active
+    background-color: blue
+
+
+.nav a
+    font-size: 14px
+    color: white
+    text-decoration: none
+.nav a:hover
+    color: yellow
+
+
+.search
+    width: 240px
+    height: 40px
+    margin: 9px 0
+    background-color: grey
+
+.slider
+    position: relative
+    padding: auto
